--- a/locale/fr.po
+++ b/locale/fr.po
@@ -1964,12 +1964,6 @@ msgstr "Choisissez une langue pour Bibledit"
 msgid "System"
 msgstr "Système"
 
-msgid "Please enter a name for the Bible"
-msgstr ""
-
-msgid "The Bible was renamed"
-msgstr ""
-
 msgid "Please enter a timezone between -12 and +14"
 msgstr "Veuillez saisir un fuseau horaire entre -12 et +14"
 
@@ -4461,9 +4455,6 @@ msgid "Queued emails"
 msgstr ""
 
 msgid "Number of emails still to be sent:"
-msgstr ""
-
-msgid "The name of the Bible is"
 msgstr ""
 
 msgid "Visit alkitabkita.info for more information."
@@ -12295,23 +12286,44 @@ msgstr ""
 msgid "Genesis"
 msgstr "Genèse"
 
+msgid "Gen"
+msgstr ""
+
 msgid "Exodus"
 msgstr "Exode"
+
+msgid "Exod"
+msgstr ""
 
 msgid "Leviticus"
 msgstr "Lévitique"
 
+msgid "Lev"
+msgstr ""
+
 msgid "Numbers"
 msgstr "Nombres"
+
+msgid "Num"
+msgstr ""
 
 msgid "Deuteronomy"
 msgstr "Deutéronome"
 
+msgid "Deut"
+msgstr ""
+
 msgid "Joshua"
 msgstr "Josué"
 
+msgid "Josh"
+msgstr ""
+
 msgid "Judges"
 msgstr "Juges"
+
+msgid "Judg"
+msgstr ""
 
 msgid "Ruth"
 msgstr "Ruth"
@@ -12319,20 +12331,38 @@ msgstr "Ruth"
 msgid "1 Samuel"
 msgstr "1 Samuel"
 
+msgid "1Sam"
+msgstr ""
+
 msgid "2 Samuel"
 msgstr "2 Samuel"
+
+msgid "2Sam"
+msgstr ""
 
 msgid "1 Kings"
 msgstr "1 Rois"
 
+msgid "1Kgs"
+msgstr ""
+
 msgid "2 Kings"
 msgstr "2 Rois"
+
+msgid "2Kgs"
+msgstr ""
 
 msgid "1 Chronicles"
 msgstr "1 Chroniques"
 
+msgid "1Chr"
+msgstr ""
+
 msgid "2 Chronicles"
 msgstr "2 Chroniques"
+
+msgid "2Chr"
+msgstr ""
 
 msgid "Ezra"
 msgstr "Esdras"
@@ -12340,8 +12370,14 @@ msgstr "Esdras"
 msgid "Nehemiah"
 msgstr "Néhémie"
 
+msgid "Neh"
+msgstr ""
+
 msgid "Esther"
 msgstr "Esther"
+
+msgid "Esth"
+msgstr ""
 
 msgid "Job"
 msgstr "Job"
@@ -12349,32 +12385,62 @@ msgstr "Job"
 msgid "Psalms"
 msgstr "Psaumes"
 
+msgid "Ps"
+msgstr ""
+
 msgid "Proverbs"
 msgstr "Proverbes"
+
+msgid "Prov"
+msgstr ""
 
 msgid "Ecclesiastes"
 msgstr "Ecclésiaste"
 
+msgid "Eccl"
+msgstr ""
+
 msgid "Song of Solomon"
 msgstr "Cantique des cantiques"
+
+msgid "Song"
+msgstr ""
 
 msgid "Isaiah"
 msgstr "Esaïe"
 
+msgid "Isa"
+msgstr ""
+
 msgid "Jeremiah"
 msgstr "Jérémie"
+
+msgid "Jer"
+msgstr ""
 
 msgid "Lamentations"
 msgstr "Lamentations"
 
+msgid "Lam"
+msgstr ""
+
 msgid "Ezekiel"
 msgstr "Ezéchiel"
+
+msgid "Ezek"
+msgstr ""
 
 msgid "Daniel"
 msgstr "Daniel"
 
+msgid "Dan"
+msgstr ""
+
 msgid "Hosea"
 msgstr "Osée"
+
+msgid "Hos"
+msgstr ""
 
 msgid "Joel"
 msgstr "Joël"
@@ -12385,32 +12451,59 @@ msgstr "Amos"
 msgid "Obadiah"
 msgstr "Abdias"
 
+msgid "Obad"
+msgstr ""
+
 msgid "Jonah"
 msgstr "Jonas"
 
 msgid "Micah"
 msgstr "Michée"
 
+msgid "Mic"
+msgstr ""
+
 msgid "Nahum"
 msgstr "Nahum"
+
+msgid "Nah"
+msgstr ""
 
 msgid "Habakkuk"
 msgstr "Habaquq"
 
+msgid "Hab"
+msgstr ""
+
 msgid "Zephaniah"
 msgstr "Sophonie"
+
+msgid "Zeph"
+msgstr ""
 
 msgid "Haggai"
 msgstr "Aggée"
 
+msgid "Hag"
+msgstr ""
+
 msgid "Zechariah"
 msgstr "Zacharie"
+
+msgid "Zech"
+msgstr ""
 
 msgid "Malachi"
 msgstr "Malachie"
 
+msgid "Mal"
+msgstr ""
+
 msgid "Matthew"
 msgstr "Matthieu"
+
+msgid "Matt"
+msgstr ""
 
 msgid "Mark"
 msgstr "Marc"
@@ -12427,35 +12520,68 @@ msgstr "Actes"
 msgid "Romans"
 msgstr "Romains"
 
+msgid "Rom"
+msgstr ""
+
 msgid "1 Corinthians"
 msgstr "1 Corinthiens"
+
+msgid "1Cor"
+msgstr ""
 
 msgid "2 Corinthians"
 msgstr "2 Corinthiens"
 
+msgid "2Cor"
+msgstr ""
+
 msgid "Galatians"
 msgstr "Galates"
+
+msgid "Gal"
+msgstr ""
 
 msgid "Ephesians"
 msgstr "Ephésiens"
 
+msgid "Eph"
+msgstr ""
+
 msgid "Philippians"
 msgstr "Philippiens"
+
+msgid "Phil"
+msgstr ""
 
 msgid "Colossians"
 msgstr "Colossiens"
 
+msgid "Col"
+msgstr ""
+
 msgid "1 Thessalonians"
 msgstr "1 Thessaloniciens"
+
+msgid "1Thess"
+msgstr ""
 
 msgid "2 Thessalonians"
 msgstr "2 Thessaloniciens"
 
+msgid "2Thess"
+msgstr ""
+
 msgid "1 Timothy"
 msgstr "1 Timothée"
 
+msgid "1Tim"
+msgstr ""
+
 msgid "2 Timothy"
 msgstr "2 Timothée"
+
+msgid "2Tim"
+msgstr ""
 
 msgid "Titus"
 msgstr "Tite"
@@ -12463,32 +12589,59 @@ msgstr "Tite"
 msgid "Philemon"
 msgstr "Philémon"
 
+msgid "Phlm"
+msgstr ""
+
 msgid "Hebrews"
 msgstr "Hébreux"
+
+msgid "Heb"
+msgstr ""
 
 msgid "James"
 msgstr "Jacques"
 
+msgid "Jas"
+msgstr ""
+
 msgid "1 Peter"
 msgstr "1 Pierre"
+
+msgid "1Pet"
+msgstr ""
 
 msgid "2 Peter"
 msgstr "2 Pierre"
 
+msgid "2Pet"
+msgstr ""
+
 msgid "1 John"
 msgstr "1 Jean"
+
+msgid "1John"
+msgstr ""
 
 msgid "2 John"
 msgstr "2 Jean"
 
+msgid "2John"
+msgstr ""
+
 msgid "3 John"
 msgstr "3 Jean"
+
+msgid "3John"
+msgstr ""
 
 msgid "Jude"
 msgstr "Jude"
 
 msgid "Revelation"
 msgstr "Apocalypse"
+
+msgid "Rev"
+msgstr ""
 
 msgid "Front Matter"
 msgstr "Introduction principale"
@@ -12502,56 +12655,110 @@ msgstr "Autre contenu"
 msgid "Tobit"
 msgstr "Tobie"
 
+msgid "Tob"
+msgstr ""
+
 msgid "Judith"
 msgstr "Judith"
+
+msgid "Jdt"
+msgstr ""
 
 msgid "Esther (Greek)"
 msgstr "Esther (Grec)"
 
+msgid "AddEsth"
+msgstr ""
+
 msgid "Wisdom of Solomon"
 msgstr "Sagesse de Salomon"
+
+msgid "Wis"
+msgstr ""
 
 msgid "Sirach"
 msgstr "Siracide"
 
+msgid "Sir"
+msgstr ""
+
 msgid "Baruch"
 msgstr "Baruch"
+
+msgid "Bar"
+msgstr ""
 
 msgid "Letter of Jeremiah"
 msgstr "Lettre de Jérémie"
 
+msgid "EpJer"
+msgstr ""
+
 msgid "Song of the Three Children"
 msgstr "Cantique des trois enfants"
+
+msgid "PrAzar"
+msgstr ""
 
 msgid "Susanna"
 msgstr "Suzanne"
 
+msgid "Sus"
+msgstr ""
+
 msgid "Bel and the Dragon"
 msgstr "Bel et le dragon"
+
+msgid "Bel"
+msgstr ""
 
 msgid "1 Maccabees"
 msgstr "1 Maccabées"
 
+msgid "1Macc"
+msgstr ""
+
 msgid "2 Maccabees"
 msgstr "2 Maccabées"
+
+msgid "2Macc"
+msgstr ""
 
 msgid "1 Esdras (Greek)"
 msgstr "1 Esdras (Grec)"
 
+msgid "1Esd"
+msgstr ""
+
 msgid "Prayer of Manasses"
 msgstr "Prière de Manassé"
+
+msgid "PrMan"
+msgstr ""
 
 msgid "Psalm 151"
 msgstr "Psaume 151"
 
+msgid "Ps151"
+msgstr ""
+
 msgid "3 Maccabees"
 msgstr "3 Maccabées"
+
+msgid "3Macc"
+msgstr ""
 
 msgid "2 Esdras (Latin)"
 msgstr "2 Esdras (Latin)"
 
+msgid "2Esd"
+msgstr ""
+
 msgid "4 Maccabees"
 msgstr "4 Maccabées"
+
+msgid "4Macc"
+msgstr ""
 
 msgid "Daniel (Greek)"
 msgstr "Daniel (grec)"
@@ -13319,12 +13526,9 @@ msgstr "Patmos"
 
 msgid ""
 "I, John, your brother and companion in the persecution, and in the kingdom "
-"and endurance of Jesus Christ, was in the island which is called Patmos, "
-"because of the word of God, and because of the testimony of Jesus Christ."
+"and endurance of Jesus Christ, was in the island called Patmos, because of "
+"the word of God, and because of the testimony of Jesus Christ."
 msgstr ""
-"Moi, Jean, qui suis votre frère et partage avec vous les persécutions, le "
-"royaume et l’endurance pour Jésus, j’étais alors dans l’île de Patmos à "
-"cause de la parole de Dieu et du témoignage de Jésus."
 
 msgid "Who is the first person to acknowledge Jesus as the Christ?"
 msgstr ""
@@ -13333,10 +13537,8 @@ msgid "Simeon"
 msgstr ""
 
 msgid ""
-"And, behold, there was a man in Jerusalem, whose name was Simeon; and the "
-"same man was just and devout, waiting for the consolation of Israel: and the "
-"Holy Ghost was upon him. And it was revealed unto him by the Holy Ghost, "
-"that he should not see death, before he had seen the Lord's Christ."
+"There was Simeon. A just and devout man. The Holy Spirit told him that he "
+"will see Christ before his death."
 msgstr ""
 
 msgid "To whom was the Acts Of Apostles written?"
@@ -13350,18 +13552,15 @@ msgid ""
 "to do and teach,"
 msgstr ""
 
-msgid "Where did Jesus met the woman of Samaria?"
+msgid "Where did Jesus met the woman from Samaria?"
 msgstr ""
 
 msgid "Jacob's well"
 msgstr ""
 
 msgid ""
-"Then cometh he to a city of Samaria, which is called Sychar, near to the "
-"parcel of ground that Jacob gave to his son Joseph. Now Jacob's well was "
-"there. Jesus therefore, being wearied with his journey, sat thus on the "
-"well: and it was about the sixth hour. There cometh a woman of Samaria to "
-"draw water: Jesus saith unto her, Give me to drink."
+"Jesus being wearied by his journey, sat on Jacob's well. Then came a woman "
+"from Samaria to get water."
 msgstr ""
 
 msgid "Who was the father of Abraham?"
@@ -13373,16 +13572,13 @@ msgstr ""
 msgid "And Terah took Abram his son,"
 msgstr ""
 
-msgid "Who was the son of Cush, the mighty hunter before the LORD?"
+msgid "Who was the son of Cush, the mighty hunter before the Lord?"
 msgstr ""
 
 msgid "Nimrod"
 msgstr ""
 
-msgid ""
-"And Cush begat Nimrod: he began to be a mighty one in the earth. He was a "
-"mighty hunter before the Lord: wherefore it is said, Even as Nimrod the "
-"mighty hunter before the Lord."
+msgid "And Cush bore Nimrod. He was a mighty hunter before the Lord."
 msgstr ""
 
 msgid "What is the name of Job's friend that answered him first?"
@@ -13391,7 +13587,7 @@ msgstr ""
 msgid "Eliphaz"
 msgstr ""
 
-msgid "Then Eliphaz the Temanite answered and said,"
+msgid "Then Eliphaz the Temanite answered and said to Job."
 msgstr ""
 
 msgid "What is the name of Ruth's husband?"
@@ -13400,9 +13596,7 @@ msgstr ""
 msgid "Boaz"
 msgstr ""
 
-msgid ""
-"So Boaz took Ruth, and she was his wife: and when he went in unto her, the "
-"Lord gave her conception, and she bare a son."
+msgid "So Boaz took Ruth as his wife."
 msgstr ""
 
 msgid "Who taught Lemuel Proverbs chapter 31?"
@@ -13412,6 +13606,94 @@ msgid "Lemuel's mother"
 msgstr ""
 
 msgid "The words of king Lemuel, the prophecy that his mother taught him."
+msgstr ""
+
+msgid "Who is the chosen people of God in the Old Testament?"
+msgstr ""
+
+msgid "Israel"
+msgstr ""
+
+msgid "Israel, you are the chosen people of the Lord your God."
+msgstr ""
+
+msgid "Where did God rescue Israel from?"
+msgstr ""
+
+msgid "Egypt"
+msgstr ""
+
+msgid "Then with his mighty arm, he rescued you from Egypt."
+msgstr ""
+
+msgid "Who's the father of Abimelech?"
+msgstr ""
+
+msgid "Gideon"
+msgstr ""
+
+msgid "Abimelech the son of Gideon went to Shechem."
+msgstr ""
+
+msgid "Who's the father of Joshua the priest in the time of Ezra?"
+msgstr ""
+
+msgid "Jozadak"
+msgstr ""
+
+msgid "The priest Joshua son of Jozadak."
+msgstr ""
+
+msgid "Who's Nebuchadnezzar?"
+msgstr ""
+
+msgid "The king of Babylonia"
+msgstr ""
+
+msgid ""
+"We were told that their people had made God angry, and he let them be "
+"captured by Nebuchadnezzar, the king of Babylonia."
+msgstr ""
+
+msgid "Who's Cyrus?"
+msgstr ""
+
+msgid "King of Babylonia"
+msgstr ""
+
+msgid ""
+"They also said that during the first year Cyrus was king of Babylonia."
+msgstr ""
+
+msgid ""
+"For how many days does Jesus appeared to the disciples after he rose from "
+"the dead?"
+msgstr ""
+
+msgid "40"
+msgstr ""
+
+msgid ""
+"For 40 days after Jesus had suffered and died, he proved in many ways that "
+"he had been raised from death."
+msgstr ""
+
+msgid "Who wrote Song of Songs?"
+msgstr ""
+
+msgid "Solomon"
+msgstr ""
+
+msgid "This is Solomon's most beautiful song."
+msgstr ""
+
+msgid "Who's the father of Hosea?"
+msgstr ""
+
+msgid "Beeri"
+msgstr ""
+
+msgid "I am Hosea son of Beeri."
 msgstr ""
 
 msgid "Username should be at least four characters long"
