--- a/locale/bibledit.pot
+++ b/locale/bibledit.pot
@@ -8617,6 +8617,9 @@ msgstr ""
 msgid "Give it a while to initialize."
 msgstr ""
 
+msgid "Alternative installation options:"
+msgstr ""
+
 msgid "Versions"
 msgstr ""
 
@@ -10548,6 +10551,9 @@ msgstr ""
 msgid "Exod"
 msgstr ""
 
+msgid "Exo"
+msgstr ""
+
 msgid "Leviticus"
 msgstr ""
 
@@ -10566,10 +10572,16 @@ msgstr ""
 msgid "Deut"
 msgstr ""
 
+msgid "Deu"
+msgstr ""
+
 msgid "Joshua"
 msgstr ""
 
 msgid "Josh"
+msgstr ""
+
+msgid "Jos"
 msgstr ""
 
 msgid "Judges"
@@ -10578,7 +10590,13 @@ msgstr ""
 msgid "Judg"
 msgstr ""
 
+msgid "Jdg"
+msgstr ""
+
 msgid "Ruth"
+msgstr ""
+
+msgid "Rut"
 msgstr ""
 
 msgid "1 Samuel"
@@ -10587,10 +10605,16 @@ msgstr ""
 msgid "1Sam"
 msgstr ""
 
+msgid "1Sa"
+msgstr ""
+
 msgid "2 Samuel"
 msgstr ""
 
 msgid "2Sam"
+msgstr ""
+
+msgid "2Sa"
 msgstr ""
 
 msgid "1 Kings"
@@ -10599,10 +10623,16 @@ msgstr ""
 msgid "1Kgs"
 msgstr ""
 
+msgid "1Ki"
+msgstr ""
+
 msgid "2 Kings"
 msgstr ""
 
 msgid "2Kgs"
+msgstr ""
+
+msgid "2Ki"
 msgstr ""
 
 msgid "1 Chronicles"
@@ -10611,13 +10641,22 @@ msgstr ""
 msgid "1Chr"
 msgstr ""
 
+msgid "1Ch"
+msgstr ""
+
 msgid "2 Chronicles"
 msgstr ""
 
 msgid "2Chr"
 msgstr ""
 
+msgid "2Ch"
+msgstr ""
+
 msgid "Ezra"
+msgstr ""
+
+msgid "Ezr"
 msgstr ""
 
 msgid "Nehemiah"
@@ -10632,6 +10671,9 @@ msgstr ""
 msgid "Esth"
 msgstr ""
 
+msgid "Est"
+msgstr ""
+
 msgid "Job"
 msgstr ""
 
@@ -10641,10 +10683,16 @@ msgstr ""
 msgid "Ps"
 msgstr ""
 
+msgid "Psa"
+msgstr ""
+
 msgid "Proverbs"
 msgstr ""
 
 msgid "Prov"
+msgstr ""
+
+msgid "Pro"
 msgstr ""
 
 msgid "Ecclesiastes"
@@ -10653,10 +10701,16 @@ msgstr ""
 msgid "Eccl"
 msgstr ""
 
+msgid "Ecc"
+msgstr ""
+
 msgid "Song of Solomon"
 msgstr ""
 
 msgid "Song"
+msgstr ""
+
+msgid "Sol"
 msgstr ""
 
 msgid "Isaiah"
@@ -10683,6 +10737,9 @@ msgstr ""
 msgid "Ezek"
 msgstr ""
 
+msgid "Eze"
+msgstr ""
+
 msgid "Daniel"
 msgstr ""
 
@@ -10698,7 +10755,13 @@ msgstr ""
 msgid "Joel"
 msgstr ""
 
+msgid "Joe"
+msgstr ""
+
 msgid "Amos"
+msgstr ""
+
+msgid "Amo"
 msgstr ""
 
 msgid "Obadiah"
@@ -10707,7 +10770,13 @@ msgstr ""
 msgid "Obad"
 msgstr ""
 
+msgid "Oba"
+msgstr ""
+
 msgid "Jonah"
+msgstr ""
+
+msgid "Jon"
 msgstr ""
 
 msgid "Micah"
@@ -10734,6 +10803,9 @@ msgstr ""
 msgid "Zeph"
 msgstr ""
 
+msgid "Zep"
+msgstr ""
+
 msgid "Haggai"
 msgstr ""
 
@@ -10744,6 +10816,9 @@ msgid "Zechariah"
 msgstr ""
 
 msgid "Zech"
+msgstr ""
+
+msgid "Zec"
 msgstr ""
 
 msgid "Malachi"
@@ -10758,16 +10833,31 @@ msgstr ""
 msgid "Matt"
 msgstr ""
 
+msgid "Mat"
+msgstr ""
+
 msgid "Mark"
+msgstr ""
+
+msgid "Mar"
 msgstr ""
 
 msgid "Luke"
 msgstr ""
 
+msgid "Luk"
+msgstr ""
+
 msgid "John"
 msgstr ""
 
+msgid "Joh"
+msgstr ""
+
 msgid "Acts"
+msgstr ""
+
+msgid "Act"
 msgstr ""
 
 msgid "Romans"
@@ -10782,10 +10872,16 @@ msgstr ""
 msgid "1Cor"
 msgstr ""
 
+msgid "1Co"
+msgstr ""
+
 msgid "2 Corinthians"
 msgstr ""
 
 msgid "2Cor"
+msgstr ""
+
+msgid "2Co"
 msgstr ""
 
 msgid "Galatians"
@@ -10806,6 +10902,9 @@ msgstr ""
 msgid "Phil"
 msgstr ""
 
+msgid "Phi"
+msgstr ""
+
 msgid "Colossians"
 msgstr ""
 
@@ -10818,10 +10917,16 @@ msgstr ""
 msgid "1Thess"
 msgstr ""
 
+msgid "1Th"
+msgstr ""
+
 msgid "2 Thessalonians"
 msgstr ""
 
 msgid "2Thess"
+msgstr ""
+
+msgid "2Th"
 msgstr ""
 
 msgid "1 Timothy"
@@ -10830,19 +10935,31 @@ msgstr ""
 msgid "1Tim"
 msgstr ""
 
+msgid "1Ti"
+msgstr ""
+
 msgid "2 Timothy"
 msgstr ""
 
 msgid "2Tim"
 msgstr ""
 
+msgid "2Ti"
+msgstr ""
+
 msgid "Titus"
+msgstr ""
+
+msgid "Tit"
 msgstr ""
 
 msgid "Philemon"
 msgstr ""
 
 msgid "Phlm"
+msgstr ""
+
+msgid "Phm"
 msgstr ""
 
 msgid "Hebrews"
@@ -10857,10 +10974,16 @@ msgstr ""
 msgid "Jas"
 msgstr ""
 
+msgid "Jam"
+msgstr ""
+
 msgid "1 Peter"
 msgstr ""
 
 msgid "1Pet"
+msgstr ""
+
+msgid "1Pe"
 msgstr ""
 
 msgid "2 Peter"
@@ -10869,10 +10992,16 @@ msgstr ""
 msgid "2Pet"
 msgstr ""
 
+msgid "2Pe"
+msgstr ""
+
 msgid "1 John"
 msgstr ""
 
 msgid "1John"
+msgstr ""
+
+msgid "1Jo"
 msgstr ""
 
 msgid "2 John"
@@ -10881,13 +11010,22 @@ msgstr ""
 msgid "2John"
 msgstr ""
 
+msgid "2Jo"
+msgstr ""
+
 msgid "3 John"
 msgstr ""
 
 msgid "3John"
 msgstr ""
 
+msgid "3Jo"
+msgstr ""
+
 msgid "Jude"
+msgstr ""
+
+msgid "Jud"
 msgstr ""
 
 msgid "Revelation"
@@ -10923,6 +11061,9 @@ msgstr ""
 msgid "AddEsth"
 msgstr ""
 
+msgid "EsG"
+msgstr ""
+
 msgid "Wisdom of Solomon"
 msgstr ""
 
@@ -10947,10 +11088,16 @@ msgstr ""
 msgid "EpJer"
 msgstr ""
 
+msgid "LJe"
+msgstr ""
+
 msgid "Song of the Three Children"
 msgstr ""
 
 msgid "PrAzar"
+msgstr ""
+
+msgid "S3Y"
 msgstr ""
 
 msgid "Susanna"
@@ -10971,10 +11118,16 @@ msgstr ""
 msgid "1Macc"
 msgstr ""
 
+msgid "1Ma"
+msgstr ""
+
 msgid "2 Maccabees"
 msgstr ""
 
 msgid "2Macc"
+msgstr ""
+
+msgid "2Ma"
 msgstr ""
 
 msgid "1 Esdras (Greek)"
@@ -10983,10 +11136,16 @@ msgstr ""
 msgid "1Esd"
 msgstr ""
 
+msgid "1Es"
+msgstr ""
+
 msgid "Prayer of Manasses"
 msgstr ""
 
 msgid "PrMan"
+msgstr ""
+
+msgid "Man"
 msgstr ""
 
 msgid "Psalm 151"
@@ -10995,10 +11154,16 @@ msgstr ""
 msgid "Ps151"
 msgstr ""
 
+msgid "Ps2"
+msgstr ""
+
 msgid "3 Maccabees"
 msgstr ""
 
 msgid "3Macc"
+msgstr ""
+
+msgid "3Ma"
 msgstr ""
 
 msgid "2 Esdras (Latin)"
@@ -11007,10 +11172,16 @@ msgstr ""
 msgid "2Esd"
 msgstr ""
 
+msgid "2Es"
+msgstr ""
+
 msgid "4 Maccabees"
 msgstr ""
 
 msgid "4Macc"
+msgstr ""
+
+msgid "4Ma"
 msgstr ""
 
 msgid "Daniel (Greek)"
